// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render correctly 1`] = `
<form>
  <Radio
    bg="primary"
    borderColor="primary"
    disabled={false}
  />
  <Label
    htmlFor="medium"
  >
    中
  </Label>
</form>
`;

exports[`Radio should render with props size and disabled 1`] = `
<form>
  <Radio
    bg="primary"
    borderColor="primary"
    disabled={true}
    size="lg"
  />
  <Label
    htmlFor="large"
  >
    大
  </Label>
</form>
`;
